<resources>
    <string name="app_name">LocationSearch</string>
    <string name="search_hint">Location Name</string>
    <string name="display_in_map">Display All on Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_title">Erase Location</string>
    <string name="dialog_message">Erase the stored location?</string>
    <string name="ok">Erase</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="investiment_title">Fundo de Investimento</string>
    <string name="what_is">O que é?</string>
    <string name="risk_measurement">Grau de risco do investimento</string>
    <string name="more_info">Mais informações sobre o investimento</string>
    <string name="found">Fundo</string>
    <string name="cdi">CDI</string>
    <string name="period_month">No mês</string>
    <string name="period_year">No ano</string>
    <string name="period_12_months">12 meses</string>
    <string name="download">Baixar</string>
    <string name="thanks">Obrigado!</string>
    <string name="success_message">Mensagem enviada com sucesso :)</string>
    <string name="invest_action">Investir</string>
</resources>
